2007-09-08  Jonathan Matthew  <jonathan@d14n.org>

	* rhythmbox-16.png: Use the new icon

2007-09-08  Jonathan Matthew  <jonathan@d14n.org>

	* development.xml: Mention 0.11.x.
	* index.xml: Add some interesting features.

2007-09-08  Jonathan Matthew  <jonathan@d14n.org>

	* news.xml: Add five or so releases we hadn't previously mentioned.

2007-04-08  James Livingston  <doclivingston@gmail.com>

	* download.xml: update the download page for 0.10

2007-04-06  James Livingston  <doclivingston@gmail.com>

	* index.xml: update the front page screenshot.

2007-04-05  James Livingston  <doclivingston@gmail.com>

	* screenshots/Makefile.am: fix the build. oops

2007-04-04  James Livingston  <doclivingston@gmail.com>

	* screenshots.xml: updated screenshots, thanks to Paul Williams

2007-03-20  James Livingston  <doclivingston@gmail.com>

	* development.xml:
	* faq.xml:
	* mkpage.xsl:
	* news.xml: update for SVN change and 0.9.8 release

2006-12-20  Ryan P Skadberg  <skadz@stigmata.org>

	* utils.xml: Rhythmbox Applet -> Music Applet, fixed link and desc

2006-10-16  James Livingston  <doclivingston@gmail.com>

	* screenshots.xml, screenshots/*: update screenshots to not be
	ancient.

2006-10-01  James Livingston  <doclivingston@gmail.com>

	* news.xml: update with news of 0.9.6

2006-06-15  James Livingston  <doclivingston@gmail.com>

	* news.xml: update with news of 0.9.5

2006-04-16  James Livingston  <doclivingston@gmail.com>

	* news.xml: add news of 0.9.4

2006-03-20  James Livingston  <jrl@ids.org.au>

	* mkpage.xsl: make the "Home" link go to our main page, not www.gnome.org

2006-03-12  James Livingston  <jrl@ids.org.au>

	* download.xml: update dependency info, remove links to really old
	binary packages (0.8.8).

2006-02-06  James Livingston  <jrl@ids.org.au>

	* news.xml: update with news of 0.9.3 and 0.9.3.1

2005-11-28  James Livingston <jrl@ids.org.au>

	* news.xml: add news of 0.9.2

2005-09-13  Bastien Nocera  <hadess@hadess.net>
