@@ -2,21 +2,24 @@
 <page>
   <title>Tools Featuring Rhythmbox Integration</title>
   <body>
-    <h2><a href="http://yang.inescn.pt/~gjc/xchatrb.py">XChat Plug-in</a></h2>
+    <h2><a href="http://tim.codestorm.net/projects/xchat-rhythmbox/">Rhythmbox XChat Announcer</a></h2>
     <p>
-      Adds a command /psong to XChat, which prints the song Rhythmbox is currently playing in an IRC channel.
+      Adds a command /rb_announce to XChat, which prints the song Rhythmbox is currently playing in an IRC channel.
+      Also provides playback control (next/previous, play/pause).
     </p>
-    <h2><a href="http://yang.inescn.pt/~gjc/rbosd.tgz">OSD Song Change Notifier</a></h2>
+    <h2><a href="http://telecom.inescporto.pt/~gjc/gnome-osd/">OSD Song Change Notifier</a></h2>
     <p>
       Displays the currently playing song in big letters on your screen each time Rhythmbox starts playing a new song.
     </p>
-    <h2><a href="http://gaim-rhythmbox.sourceforge.net/">Gaim-Rhythmbox</a></h2>
+    <h2><a href="http://jon.oberheide.org/projects/pidgin-rhythmbox/">Pidgin-Rhythmbox</a></h2>
     <p>
-      Updates your Gaim profile with the currently playing song information from Rhythmbox.
+      Updates your Pidgin profile with the currently playing song information from Rhythmbox.
     </p>
 
-    <h2><a href="http://gdesklets.gnomedesktop.org/categories.php?func=gd_show_app&amp;gd_app_id=162">Rhythmlet</a></h2>
-    <p>Rhythmlet is a gDesklets sensor for Rhythmbox written in pure Python. It can retrieve cover images locally or from Amazon.com, has configurable display strings, playback controls, editable ratings (requires included patch), and a seek bar. </p>
+    <h2><a href="http://gdesklets.zencomputer.ca/">gDesklets</a></h2>
+    <p>
+      A few different gDesklet modules control and display information from Rhythmbox.
+    </p>
 
     <h2><a href="http://www.kuliniewicz.org/music-applet/">Music Applet</a></h2>
     <p>Music Applet is a small, simple GNOME panel applet that lets you control a variety of different music players (including Rhythmbox) from the panel. Music Applet provides easy access to information about the current song and the most important playback controls.</p>
@@ -24,14 +27,17 @@
     <h2><a href="http://www.webdez.net/hacks/rbxml2html">Rhythmbox XSLT</a></h2>
     <p>This XSLTconverts a Rhythmbox library database from its native XML format into an XHTML web page suitable for use on the web.</p>
 
-    <h2><a href="http://davyd.ucc.asn.au/drivel.xml">Drivel</a></h2>
+    <h2><a href="http://www.dropline.net/drivel/">Drivel</a></h2>
     <p>Drivel is a LiveJournal client for the GNOME desktop. It has a handy shortcut to insert the title and name of the song Rhythmbox is currently playing in the blog entry you are writing.</p>
 
+<!-- site has mostly vanished, uses bonobo
     <h2><a href="http://tune.jabberstudio.org/">Rhythmbox Tune Publisher</a></h2>
     <p>This little tool publishes information about Rhythmbox song changes to a Jabber pubsub node using the User Tune protocol.</p>
+-->
 
+<!-- site seems to have vanished
     <h2><a href="http://cardhu.pnx.se/jonatan/blueremote.php">Blue Remote</a></h2>
-    <p>Blue Remote is a bluetooth remote controller for Rhythmbox. With it you can operate the music player from a bluetooth enabled phone, such as the Sony-Ericsson T630.</p>
+    <p>Blue Remote is a bluetooth remote controller for Rhythmbox. With it you can operate the music player from a bluetooth enabled phone, such as the Sony-Ericsson T630.</p> -->
     <h2><a href="http://www.iosart.com/foxytunes/firefox/">FoxyTunes</a></h2>
     <p>FoxyTunes is an Extension for Mozilla Firefox. It allows you to control Rhythmbox (or your favorite media player) without leaving the browser.</p>
   </body>
