@@ -1,5 +1,10 @@
 2007-09-08  Jonathan Matthew  <jonathan@d14n.org>
 
+	* utils.xml: Comment out a few dead links and tools that don't work,
+	and update a few others.
+
+2007-09-08  Jonathan Matthew  <jonathan@d14n.org>
+
 	* rhythmbox-16.png: Use the new icon
 
 2007-09-08  Jonathan Matthew  <jonathan@d14n.org>
